Add metrics and health monitoring (#27)
* feat: Add metrics and health monitoring

* refactor: Test metrics endpoint

* refactor: Simplify naming and clarify types

* refactor: Improve comment

* refactor: Small refactor

* chore: Regenerate spec

* refactor: Add test for health endpoint

* refactor: Decouple metrics service from public read api

* refactor: Re-generate swagger spec

* refactor: Adjust function visibility

* refactor: Implemented Cancellation Token and improved server spawning

* refactor: Return prom service errors

* refactor: Simplify prom_handle type

* refactor: Match u64 prom values, rename `last_cehckpoint_received`

* refactor: Update metrics after database transaction

* refactor: Delete test dbs on test setup
